--- a/arvore.html
+++ b/arvore.html
@@ -1644,7 +1644,7 @@
     <br />
 
     <p><strong><span class='c16'>BN -</span> <span class='c6'>1.1.3.9.6.</span> <span class='c13'>ANÉZIA JOSEFINA GRISSI</span></strong></p>
-    <p><span class='c13'>Nascida em 21/10/1949, em Barbacena, MG. Casou-se em 25/09/1971, com <strong>ÉZIO HILTON ZONZIN</strong>, nascido em 31/05/1945, em Barbacena, MG. Filho de <strong>CELESTINO FORTUNATO ZONZIN</strong> e <strong>HILDA DE SÁ DOMINGOS ZONZIN</strong>. Ele falecido em</span></p>
+    <p><span class='c13'>Nascida em 21/10/1949, em Barbacena, MG. Casou-se em 25/09/1971, com <strong>ÉZIO HILTON ZONZIN</strong>, nascido em 31/05/1945, em Barbacena, MG. Filho de <strong>CELESTINO FORTUNATO ZONZIN</strong> e <strong>HILDA DE SÁ DOMINGOS ZONZIN</strong>. Ela falecida em 31/12/2017, com 68 anos em Barbacena, MG. Ele falecido em</span></p>
     <p><span class='c13'>Tem três filhos:</span></p>
 
     <br />
